# ondabot

./: Cargo.toml  README.md  Shuttle.toml
src/: main.rs
src/bot/: handler.rs
src/commands/: build.rs  counter.rs  gepeto.rs  info.rs  lulu.rs  mod.rs  pregas.rs  vtnc.rs
