[package]
name = "ondabot"
version = "0.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
chatgpt_rs = "1.2.3"
rand = "0.8.5"
serenity = { version = "0.12.0", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-runtime = "0.49.0"
shuttle-serenity = "0.49.0"
tracing = "0.1.37"
unicode-segmentation = "1.12.0"
